<resources>

    <string name="app_name">Tomatina</string>
    <string name="channel_name">Tomatina</string>
    <string name="channel_description">Pomodoro notifications</string>

    <!-- Notification -->
    <string name="notif_action_start_pomodoro">Start</string>
    <string name="notif_action_skip_stage">Skip</string>
    <string name="notif_action_stop_pomodoro">Stop</string>
    <string name="notif_action_continue_pomodoro">Continue</string>

    <string name="notif_back_to_work_title">Back to work</string>
    <string name="notif_back_to_work_text">It\'s time to go back to work</string>
    <string name="notif_working_title">Working</string>
    <string name="notif_working_text">@string/state_text_working</string>

    <string name="notif_take_short_break_title">Take a short break</string>
    <string name="notif_take_short_break_text">Rest for a while and take a short break</string>
    <string name="notif_short_break_title">Short break</string>
    <string name="notif_short_break_text">@string/state_text_short_break</string>

    <string name="notif_take_long_break_title">Take a long break</string>
    <string name="notif_take_long_break_text">Go and enjoy your long break, you made it</string>
    <string name="notif_long_break_title">Long break</string>
    <string name="notif_long_break_text">@string/state_text_long_break</string>

    <string name="notif_restart_title">Again?</string>
    <string name="notif_restart_text">Do we start another pomodoro?</string>

    <!-- Main Activity -->
    <string name="home_tab">Home</string>
    <string name="user_tab">Wall</string>
    <string name="historical_tab">Historical</string>

    <!-- Home -->
    <string name="home_save_info_error">Ups! Information cannot be saved :(</string>

    <!-- States -->
    <string name="state_text_working">Stop procrastinating! Work! Go!</string>
    <string name="state_text_short_break">Enjoy your short break!</string>
    <string name="state_text_long_break">Congrats! You reach the long break!</string>
    <string name="state_text_none">What are you waiting for?</string>

    <!-- Pomodoro Info dialog -->
    <string name="info_dialog_title">Information</string>
    <string name="info_dialog_title_label">Title</string>
    <string name="info_dialog_notes_label">Notes</string>
    <string name="info_dialog_category_label">Category</string>
    <string name="info_dialog_save">Save</string>
    <string name="info_dialog_close">Close</string>
    <string name="info_no_title_value">(no title)</string>

    <string name="info_conflict_dialog_title">Conflict</string>
    <string name="info_conflict_dialog_content">There are other pomodoros with the same title. \nIf you keep going, it will link with them. Do you want to replace its content or to use it as it is (notes and category)?</string>
    <string name="info_conflict_dialog_overwrite">Replace</string>
    <string name="info_conflict_dialog_existing">As it is</string>
    <string name="info_conflict_dialog_cancel">Cancel</string>

    <!-- Historical -->
    <string name="historical_no_info_title">(no info)</string>
    <string name="historical_no_categories">No categories</string>
    <string name="historical_pomodoros_counter_label">pomodoros</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_unit_minutes">minutes</string>
    <string name="settings_unit_pomodoros">pomodoros</string>
    <string name="settings_save">Save</string>
    <string name="settings_close">Close</string>

    <!-- Settings Preferences -->
    <string name="prefs_pomodoro_title">Pomodoro settings</string>
    <string name="prefs_pomodoro_key" translatable="false">pomodoro-settings</string>
    <string name="prefs_notification_title">Notification settings</string>
    <string name="prefs_notification_key" translatable="false">notification-settings</string>
    <string name="prefs_behaviour_title">Behaviour settings</string>
    <string name="prefs_behaviour_key" translatable="false">behaviour-settings</string>

    <string name="pref_sound_key" translatable="false">pomodoro-sound</string>
    <string name="pref_sound_default" translatable="false">true</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_sound_summary">Pomodoro events will be alerted with sounds</string>

    <string name="pref_sound_custom_key" translatable="false">pomodoro-sound-custom</string>
    <string name="pref_sound_custom_default">Default system</string>
    <string name="pref_sound_custom_title">Custom sound</string>
    <string-array name="pref_sound_custom_entries_label">
        <item>@string/pref_sound_custom_default</item>
    </string-array>
    <string-array name="pref_sound_custom_entries_values">
        <item>@string/pref_sound_custom_default</item>
    </string-array>

    <string name="pref_vibration_key" translatable="false">pomodoro-vibration</string>
    <string name="pref_vibration_default" translatable="false">true</string>
    <string name="pref_vibration_title">Vibration</string>
    <string name="pref_vibration_summary">The device will vibrate several times to alert you of the events</string>

    <string name="pref_insist_key" translatable="false">pomodoro-insist-alert</string>
    <string name="pref_insist_default" translatable="false">true</string>
    <string name="pref_insist_title">Insist</string>
    <string name="pref_insist_summary">Notifications will be sent several times when pomodoro is waiting to continue</string>

    <string name="pref_overlay_key" translatable="false">overlay-view</string>
    <string name="pref_overlay_default" translatable="false">false</string>
    <string name="pref_overlay_title">Overlay during pomodoro</string>
    <string name="pref_overlay_summary">Overlay the screen during the pomodoro to avoid procrastinating</string>

    <string name="pref_pomodoro_time_key" translatable="false">pomodoro-work-time</string>
    <string name="pref_pomodoro_time_default" translatable="false">25</string>
    <string name="pref_pomodoro_time_title">Work time</string>

    <string name="pref_short_break_time_key" translatable="false">pomodoro-short-break-time</string>
    <string name="pref_short_break_time_default" translatable="false">5</string>
    <string name="pref_short_break_time_title">Short break time</string>

    <string name="pref_long_break_time_key" translatable="false">pomodoro-long-break-time</string>
    <string name="pref_long_break_time_default" translatable="false">30</string>
    <string name="pref_long_break_time_title">Long break time</string>

    <string name="pref_pomodoros_to_long_break_key" translatable="false">pomodoros-to-long-break</string>
    <string name="pref_pomodoros_to_long_break_default" translatable="false">4</string>
    <string name="pref_pomodoros_to_long_break_title">Pomodos to long break</string>

    <string name="pref_restore_default_key" translatable="false">restore-default-values</string>
    <string name="pref_restore_default_title">Restore default values</string>
    <string name="pref_restore_default_summary">The default values are recommended for all types of tasks</string>

</resources>
