<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.github.nfdz.tomatime.settings.view.DarkPreferenceCategory
        android:title="@string/prefs_pomodoro_title"
        android:key="@string/prefs_pomodoro_key">

        <io.github.nfdz.tomatime.settings.view.NumberPickerPreference
            android:key="@string/pref_pomodoro_time_key"
            android:title="@string/pref_pomodoro_time_title"
            android:defaultValue="@string/pref_pomodoro_time_default"
            app:min_number="5"
            app:max_number="60"
            app:suffix="@string/settings_unit_minutes"
            style="@style/AppPreference.DialogPreference" />

        <io.github.nfdz.tomatime.settings.view.NumberPickerPreference
            android:key="@string/pref_short_break_time_key"
            android:title="@string/pref_short_break_time_title"
            android:defaultValue="@string/pref_short_break_time_default"
            app:min_number="2"
            app:max_number="60"
            app:suffix="@string/settings_unit_minutes"
            style="@style/AppPreference.DialogPreference" />

        <io.github.nfdz.tomatime.settings.view.NumberPickerPreference
            android:key="@string/pref_long_break_time_key"
            android:title="@string/pref_long_break_time_title"
            android:defaultValue="@string/pref_long_break_time_default"
            app:min_number="5"
            app:max_number="60"
            app:suffix="@string/settings_unit_minutes"
            style="@style/AppPreference.DialogPreference" />

        <io.github.nfdz.tomatime.settings.view.NumberPickerPreference
            android:key="@string/pref_pomodoros_to_long_break_key"
            android:title="@string/pref_pomodoros_to_long_break_title"
            android:defaultValue="@string/pref_pomodoros_to_long_break_default"
            app:min_number="2"
            app:max_number="15"
            app:suffix="@string/settings_unit_pomodoros"
            style="@style/AppPreference.DialogPreference" />

        <android.support.v7.preference.Preference
            android:title="@string/pref_restore_default_title"
            android:key="@string/pref_restore_default_key"
            android:summary="@string/pref_restore_default_summary"/>

    </io.github.nfdz.tomatime.settings.view.DarkPreferenceCategory>

    <io.github.nfdz.tomatime.settings.view.DarkPreferenceCategory
        android:title="@string/prefs_behaviour_title"
        android:key="@string/prefs_behaviour_key">

        <SwitchPreferenceCompat
            android:key="@string/pref_overlay_key"
            android:title="@string/pref_overlay_title"
            android:summary="@string/pref_overlay_summary"
            android:defaultValue="@string/pref_overlay_default"
            style="@style/AppPreference.DialogPreference"/>

        <SwitchPreferenceCompat
            android:key="@string/pref_insist_key"
            android:title="@string/pref_insist_title"
            android:summary="@string/pref_insist_summary"
            android:defaultValue="@string/pref_insist_default"
            style="@style/AppPreference.DialogPreference"/>

    </io.github.nfdz.tomatime.settings.view.DarkPreferenceCategory>

    <io.github.nfdz.tomatime.settings.view.DarkPreferenceCategory
        android:title="@string/prefs_notification_title"
        android:key="@string/prefs_notification_key">

        <SwitchPreferenceCompat
            android:key="@string/pref_vibration_key"
            android:title="@string/pref_vibration_title"
            android:summary="@string/pref_vibration_summary"
            android:defaultValue="@string/pref_vibration_default"
            style="@style/AppPreference.DialogPreference"/>

        <SwitchPreferenceCompat
            android:key="@string/pref_sound_key"
            android:title="@string/pref_sound_title"
            android:summary="@string/pref_sound_summary"
            android:defaultValue="@string/pref_sound_default"
            style="@style/AppPreference.DialogPreference"/>

        <android.support.v7.preference.ListPreference
            android:key="@string/pref_sound_custom_key"
            android:title="@string/pref_sound_custom_title"
            android:defaultValue="@string/pref_sound_custom_default"
            android:dependency="@string/pref_sound_key"
            android:entries="@array/pref_sound_custom_entries_label"
            android:entryValues="@array/pref_sound_custom_entries_values"
            android:summary="%s"
            style="@style/AppPreference.DialogPreference" />

    </io.github.nfdz.tomatime.settings.view.DarkPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>