<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/info_til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="?dialogPreferredPadding"
        android:paddingLeft="?dialogPreferredPadding"
        android:paddingRight="?dialogPreferredPadding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/info_tied_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="50"
            android:hint="@string/info_dialog_title_label"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/info_til_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintLeft_toLeftOf="@+id/info_til_title"
        app:layout_constraintRight_toRightOf="@+id/info_til_title"
        app:layout_constraintTop_toBottomOf="@+id/info_til_category"
        android:paddingLeft="?dialogPreferredPadding"
        android:paddingRight="?dialogPreferredPadding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/info_tied_notes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_notes_height"
            android:inputType="textMultiLine"
            android:maxLines="200"
            android:hint="@string/info_dialog_notes_label"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/info_til_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintLeft_toLeftOf="@+id/info_til_title"
        app:layout_constraintRight_toRightOf="@+id/info_til_title"
        app:layout_constraintTop_toBottomOf="@+id/info_til_title"
        android:paddingLeft="?dialogPreferredPadding"
        android:paddingRight="?dialogPreferredPadding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/info_tied_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="50"
            android:hint="@string/info_dialog_category_label"/>

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>